# russpot

./: Cargo.toml  LICENSE  README.md
src/: actionbuilder.rs  components.rs  library.rs  main.rs  navigation.rs  spotconn.rs  style.css  viewmodel.rs
src/components/: actions.rs  denselist.rs  denselist_factory.rs  multiview.rs  playlistitem.rs  searchpage.rs  smallblock.rs  spotitem.rs  switchview.rs
src/spot/: runtime.rs
src/spotconn/: model.rs
src/views/: item.rs
