[package]
name = "russpot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_12"] }
librespot = "0.4.2"
tokio = "1.38.0"
