[package]
name = "russpot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path="src/example_authcode.rs"
name="example-authcode"

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_12"] }
librespot = "0.4.2"
log = "0.4.22"
relm4 = "0.8.1"
reqwest = "0.11"
rspotify = { version = "0.13.2", features = ["cli"] }
serde_json = "1.0.118"
tokio = "1.38.0"
tracker = "0.2.1"
